# DeepFeature

./: .gitignore  .tmp.txt  CLSWorker  CMakeCache.txt  CMakeLists.txt  Classifier.cpp  Classifier.hpp  DPWorker  DP_WORKER  DeepFeatureExtractor.cpp  DeepFeatureExtractor.hpp  DeepFeatureExtractor_bk.cpp  DeepFeatureExtractor_bk.hpp  MBS.cpp  MBS.hpp  MBS_WORKER  Makefile  PCAWorker  README.md  ResNet_pooling.prototxt  TEST_WORKER  accu_test.cpp  accu_test.sh  cachegrind.out.27655  cachegrind.out.27656  capImgsXiamen.cpp  cls_main.cpp  cmake_install.cmake  cospeak.hpp  dp_main.cpp  mbs_main.cpp  pca.cpp  pca_img_list.txt  results.log.thresh0.935  samples_test.sh  test_cv  test_cv.cpp  tiny_pca.cpp  tiny_pca_Worker  to_make  (+1 more)
DR_Train/: anchor_imgs.py  anchor_paintings.py  setup.py
DR_Train/Deep_Retriver.egg-info/: PKG-INFO  SOURCES.txt
Train/: _init_paths.py  anchor_imgs.py
tmp/: test_file_list.txt  train_file_list.txt
tmp/offline_test1/: label_map.txt  log.txt
tmp/online_test_1/: lable_file.txt  log.txt  test_file_list.txt  train_file_list.txt
tmp/online_test_2/: test_file_list.txt  train_file_list.txt
tmp/online_test_3/: lable_file.txt  test_file_list.txt
